fixed: hide scrollbar visibility

--- a/static/css/user/cart.css
+++ b/static/css/user/cart.css
@@ -155,6 +155,7 @@ html, body {
     border-radius: 8px;
     object-fit: cover;
     background: #ddd;
+    transform: translateY(-13px);
 }
 .qty-input {
     font-size: 11px;
@@ -229,13 +230,13 @@ html, body {
 .subtotal-row {
     font-weight: 800;
     font-size: 18px;
-    color: var(--bg-antique-cream);
+    color: var(--fill-natural-beige);
 }
 
 .discount-row {
     font-size: 11px;
     opacity: 0.7;
-    color: var(--bg-antique-cream);
+    color: var(--fill-natural-beige);
 }
 
 .checkout-btn {
@@ -304,19 +305,31 @@ html, body {
     display: flex;
     align-items: center;
     gap: 8px;
+
     color: white;
     font-weight: 700;
     font-size: 14px;
+
     cursor: pointer;
     user-select: none;
 }
 
+
+
+.all-toggle:hover {
+    background: rgba(255, 255, 255, 0.18);
+}
 .all-toggle input {
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
+
     accent-color: var(--bg-antique-cream);
+
     cursor: pointer;
 }
+
+
+
 
 .edit-action-btn {
     background: rgba(255, 255, 255, 0.15);
@@ -355,4 +368,13 @@ html, body {
 
 .remove-btn:active {
     transform: scale(0.95);
+}
+.qty-input {
+    font-size: 11px;
+    font-weight: 600;
+    width: 35px;
+    text-align: center;
+    border: none;
+    background: transparent;
+    outline: none;
 }
